<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_weak"
    tools:context=".Weakness">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/weakness_bgbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/countView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/whitebox"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="@color/weaktext"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            tools:ignore="TextContrastCheck">


        </TextView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/what_are_your_personal_internal_n_weaknesses_that_you_need_to_work_n_on_to_achieve_your_goals"
            android:textColor="@color/weaktext"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:layout_marginStart="-12dp"
            android:padding="7dp"
            android:text="@string/eakness"
            android:textColor="@color/weaktext"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/weaklogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_height="0dp"
        android:nestedScrollingEnabled="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/adder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/redbtn"
            android:text="@string/click_to_add"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_weight="10">

            <ImageView
                android:id="@+id/homenav"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/sbtn"
                android:clickable="true"
                android:padding="8dp"
                android:src="@drawable/home_icon"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/strengthnav"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/s_btn"
                android:clickable="true"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/s"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/oppornav"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/obtn"
                android:clickable="true"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/o"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/thnav"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/tbtn"
                android:clickable="true"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/t"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/todonav"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/todobtn"
                android:clickable="true"
                android:padding="8dp"
                android:src="@drawable/todo"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck" />



        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>